--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "homepage": "https://github.com/pranay022/RBAC#readme",
     "description": "",
     "dependencies": {
+        "@hapi/joi": "^17.1.1",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
